<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kmitl.finalproject.montita58070114.bingo.BingoActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="Insert Number (0 - 99)"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/block1"
                android:layout_width="0px"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#bababa"
                android:hint="x"
                android:inputType="number"
                android:textAlignment="center"
                android:textSize="32sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/block2"
                android:layout_width="0px"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:hint="x"
                android:inputType="number"
                android:textAlignment="center"
                android:textSize="32sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/block3"
                android:layout_width="0px"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#bababa"
                android:hint="x"
                android:inputType="number"
                android:textAlignment="center"
                android:textSize="32sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/block4"
                android:layout_width="0px"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:hint="x"
                android:inputType="number"
                android:textAlignment="center"
                android:textSize="32sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/block5"
                android:layout_width="0px"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#bababa"
                android:hint="x"
                android:inputType="number"
                android:textAlignment="center"
                android:textSize="32sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/block6"
                android:layout_width="0px"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:hint="x"
                android:inputType="number"
                android:textAlignment="center"
                android:textSize="32sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/block7"
                android:layout_width="0px"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#bababa"
                android:hint="x"
                android:inputType="number"
                android:textAlignment="center"
                android:textSize="32sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/block8"
                android:layout_width="0px"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:hint="x"
                android:inputType="number"
                android:textAlignment="center"
                android:textSize="32sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/block9"
                android:layout_width="0px"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#bababa"
                android:hint="x"
                android:inputType="number"
                android:textAlignment="center"
                android:textSize="32sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/roundTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:text="Current Round : 0"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/stateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/roundTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="NOT_START"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/controlBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#003d33"
        android:textColor="#FFFFFF"
        android:text="Start" />

    <TextView
        android:id="@+id/allRand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stateTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="New Text" />

</RelativeLayout>

